# riif

./: Cargo.toml  README.md  image.riif
src/: riif.rs  riif_viewer.rs
src/riif_core/: cli.rs  decode.rs  encode.rs  filters.rs  mod.rs  read.rs  view.rs
