[package]
name = "riif"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
image = "0.25.6"
egui_extras = { version = "*", features = ["all_loaders"] }
eframe = "0.31.1"
flate2 = "1.1.2"


[[bin]]
path = "src/riif.rs"
name = "riif"

[[bin]]
path = "src/riif_viewer.rs"
name = "riif_viewer"
